--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "npm": ">=6.14.8",
+    "yarn": "please-use-npm"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
