--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "engines": {
     "npm": ">=6.14.8",
-    "yarn": "please-use-npm"
+    "yarn": ">=1.16.0"
   },
   "browserslist": {
     "production": [
